moved filtering and sorting logic to helpers prepared the ground for Breadcrumbs

--- a/src/components/FilterBar/FilterBar.scss
+++ b/src/components/FilterBar/FilterBar.scss
@@ -1,6 +1,7 @@
 @import "src/styles/variables";
 .filters-container {
   min-width: 250px;
+  max-width: 300px;
   display: flex;
   flex-direction: column;
 
