--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -2,7 +2,7 @@
 .layout {
   width: 80%;
   margin: 0 auto;
-  @media screen and (max-width: $mobile) {
+  @media screen and (max-width: $tablets) {
     width: 90%;
   }
 }
