--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -1,4 +1,5 @@
 @import "src/styles/variables";
+
 .product-info-container {
   .product-content {
     display: flex;
@@ -6,26 +7,46 @@
     border-radius: 5px;
     padding: 20px;
     margin-bottom: 40px;
+    @media screen and (max-width: $mobile) {
+      flex-direction: column;
+      padding: 0;
+      border: none;
+      border-radius: 0px;
+    }
   }
+
   .product-info_box {
     padding-top: 5px;
     display: flex;
     flex-direction: column;
   }
+
   .product-img_wrapper {
     border: 1px solid $light-gray;
     margin-right: 20px;
     border-radius: 5px;
-    padding: 10px;
     width: 340px;
+    @media screen and (max-width: $mobile) {
+      background-color: $cream;
+      padding: 0;
+      margin-right: 0;
+      width: 100%;
+      border: none;
+      border-radius: 0;
+      margin-bottom: 15px;
+      transform: scale(1.1);
+    }
+
     img {
       width: 100%;
     }
   }
+
   h3 {
     margin: 0;
     font-size: 24px;
   }
+
   button {
     background-color: $blue;
     color: white;
@@ -35,24 +56,33 @@
     cursor: pointer;
     transition: all 0.2s linear;
     margin-bottom: 10px;
+
     &:hover {
       filter: contrast(200%);
     }
+
     &:focus {
       outline: none;
     }
   }
+
   .row-underline {
     margin-bottom: 10px;
     position: relative;
+
     &:after {
       content: '';
       width: 100%;
       position: absolute;
       bottom: -5px;
       border-bottom: 2px solid $light-gray;
+      @media screen and (max-width: $mobile) {
+        display: none;
+      }
     }
   }
+
+
 
   .product-info_row {
     display: flex;
@@ -63,19 +93,31 @@
       width: 30%;
 
     }
+
     p:first-child {
       color: $gray;
       margin-right: 20px;
     }
   }
+  .category-row {
+    @media screen and (max-width: $mobile) {
+      display: none;
+    }
+  }
+
   .product-price {
     font-weight: bold;
     font-size: 30px;
     margin: 10px 0 5px 0;
   }
+
   .product-detail {
     padding: 20px;
     border: 1px solid $light-gray;
     border-radius: 5px;
+    @media screen and (max-width: $mobile) {
+      padding: 0;
+      border: none;
+    }
   }
 }
