--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,7 +5,7 @@ $light-gray: #DEE2E7;
 $gray: #8B96A5;
 $dark-gray: #505050;
 $dark: #1C1C1C;
-
+$cream: #F0F0F0;
 //*breakpoints
 
 $laptops: 1025px;
