--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,4 +5,7 @@ body {
   font-family: 'Inter', sans-serif;
   background-color: $light-blue;
   font-size: 16px;
+  a {
+    text-decoration: none;
+  }
 }
