--- a/src/pages/Products/ProductList/ProductList.scss
+++ b/src/pages/Products/ProductList/ProductList.scss
@@ -1,4 +1,4 @@
-@import "src/styles/variables";
+@import "../../../styles/variables";
 .products-list {
   padding-left: 20px;
   @media screen and (max-width: $mobile) {
