--- a/src/pages/Products/FilterBar/FilterBar.scss
+++ b/src/pages/Products/FilterBar/FilterBar.scss
@@ -1,4 +1,4 @@
-@import "src/styles/variables";
+@import "../../../styles/variables";
 .filters-container {
   min-width: 250px;
   max-width: 300px;
